spec/error_undefined_variable.expected
spec/error_undefined_variable.kex:4:16: error: Undefined name: `doesNotExist`
spec/error_undefined_variable.kex:4:16: error: Undefined identifier: doesNotExist
Aborted: fix type errors before running (use --no-check to skip).
