spec/error_undefined_variable.kex
# Referencing an undefined variable is a runtime error.
main do
  IO.printLine("before")
  IO.printLine(doesNotExist)
end
